@@ -1,7 +1,7 @@
 #
 # Copyright (c) 1996, 1997, 1998, 1999
 #             Shigio Yamaguchi. All rights reserved.
-# Copyright (c) 1999, 2000, 2001
+# Copyright (c) 1999, 2000, 2001, 2002
 #             Tama Communications Corporation. All rights reserved.
 #
 # This file is part of GNU GLOBAL.
@@ -77,6 +77,7 @@ $'normal_suffix = 'html';			# suffix of normal html file
 $'action = 'cgi-bin/global.cgi';		# default action
 $'id = '';					# id (default non)
 $'cgi = 1;					# 1: make cgi-bin/
+$'definition_header='after';			# {no|after|before}
 #
 # tag
 #
@@ -159,6 +160,9 @@ if ($var1 = &'getconf('gzipped_suffix')) {
 }
 if ($var1 = &'getconf('normal_suffix')) {
 	$'normal_suffix = $var1;
+}
+if ($var1 = &'getconf('definition_header')) {
+	$'definition_header = $var1;
 }
 if ($var1 = &'getconf('full_path')) {
 	$'full_path = $var1;
@@ -1794,20 +1798,27 @@ sub src2html {
 			}
 		}
 		&unprotect_line();
+		# make guide
+		if ($define_line) {
+			$guide = '';
+			$guide .= ' ' x ($ncol + 1) if ($'nflag);
+			$guide .= "$'comment_begin/* ";
+			$guide .= &link_format(&anchor'getlinks($define_line));
+			if ($'show_position) {
+				$guide .= $'position_begin;
+				$guide .= "[+$define_line $file]";
+				$guide .= $'position_end;
+			}
+			$guide .= " */$'comment_end\n";
+		}
 		# print a line
+		if ($define_line && $'definition_header eq 'before') {
+			print $guide;
+		}
 		printf "%${ncol}d ", $. if ($'nflag);
 		print;
-		# print guide
-		if ($define_line) {
-			print ' ' x ($ncol + 1) if ($'nflag);
-			print "$'comment_begin/* ";
-			print &link_format(&anchor'getlinks($define_line));
-			if ($'show_position) {
-				print $'position_begin;
-				print "[+$define_line $file]";
-				print $'position_end;
-			}
-			print " */$'comment_end\n";
+		if ($define_line && $'definition_header eq 'after') {
+			print $guide;
 		}
 	}
 	print "</PRE>\n";
