@@ -20,6 +20,10 @@ ___________________________________
 GLOBAL NEWS - User visible changes.
 At least, you had better search '[INCOMPATIBLE CHANGES]' for each version.
 
+Current version by Shigio Yamaguchi
+
+* htags: configuration variable definition_header={no|after|before} added.
+
 Version 4.3.1 - Jan 22 2002, by Shigio Yamaguchi
 
 This is bug fix version.
